syntax = "proto3";

package order;

option go_package = "project/pkg/grpc/proto";

import "google/protobuf/timestamp.proto";

service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}

message ListOrdersRequest {}

message Order {
  int64 id = 1;
  int64 customer_id = 2;
  double total_amount = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}